# MEPHI-LaboratoryWorks

./: README.md
Sem 1/Lab1/: main.c
Sem 1/Lab2/: main.c
Sem 1/Lab3 /: Rab.c  Rab.h  main.c
Sem 1/Lab4/: main.c  mystring.c  mystring.h
Sem 1/Lab5/: data.txt  main.c  point.c  point.h
Sem 1/Lab6/: list.c  list.h  main.c
Sem 2/Lab1/: Complexvect.c  Complexvect.h  Doublevect.c  Doublevect.h  RingInfo.c  RingInfo.h  Testprog.c  Testprog.h  Vrctor3.c  Vrctor3.h  main.c
Sem 2/Lab2/: CMakeCache.txt  CMakeLists.txt  Makefile  Tests.cpp  cmake_install.cmake  main.cpp
Sem 2/Lab2/Data_structures/: data_structures.hpp
Sem 2/Lab2/Menus/: menus.cpp
Sem 2/Lab2/Sequences/: Sequences.hpp
Sem 2/Lab3/: CMakeCache.txt  CMakeLists.txt  Deque.hpp  Makefile  Stack.hpp  Tests.cpp  cmake_install.cmake  main  main.cpp
Sem 2/Lab3/Menus/: menus.hpp
Sem 2/Lab3/Sequences/: Sequences.cpp  Sequences.hpp
Sem 2/Lab4/: CMakeCache.txt  CMakeLists.txt  Makefile  Serializer.hpp  Stack.hpp  Tests.cpp  cmake_install.cmake  doctest.h  main  main.cpp  nary_tree.hpp  test
Sem 2/Lab4/Data_structures/: data_structures.hpp
Sem 2/Lab4/Menus/: menus.cpp  menus.hpp
Sem 2/Lab4/Sequences/: Sequences.hpp
